# MMORPG-Platform

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: bootstrap.yml  ci.yml  nightly-windows.yml  nightly.yml
cmake/: compiler_warnings.cmake  sanitizers.cmake  vcpkg.cmake
docs/: BUILD.md  BUILD_WINDOWS.md  CHANGELOG_M01.md  CHANGELOG_M02.md  CHANGELOG_M03.md  CHANGELOG_M04.md  CHANGELOG_M05.md  ECS_INVARIANTS.md  ERROR_CLASSIFICATION.md  PROFILING.md  RECOVERY.md
scripts/: build.bat  build.sh  check_memory_growth.py
src/: main.cpp
src/core/diagnostics/: README.md  diagnostics_config.h  diagnostics_manager.cpp  diagnostics_manager.h  ecs_validator.cpp  ecs_validator.h  event_timeline.cpp  event_timeline.h  health_score.cpp  health_score.h  memory_validator.cpp  memory_validator.h  snapshot_dump.cpp  snapshot_dump.h
src/core/ecs/: archetype.cpp  archetype.h  archetype_manager.cpp  archetype_manager.h  component_array.h  component_traits.h  entity.h  query.h  system.h  type_registry.cpp  type_registry.h  world.cpp  world.h
src/core/jobs/: job_system.cpp  job_system.h  task.cpp  task.h  task_graph.cpp  task_graph.h  work_stealing_queue.cpp  work_stealing_queue.h
src/core/log/: log.cpp  log.h
src/core/memory/: allocator.h  arena_allocator.cpp  arena_allocator.h  block_allocator.cpp  block_allocator.h  memory_system.cpp  memory_system.h  memory_tracker.cpp  memory_tracker.h  pool_allocator.h  stack_allocator.cpp  stack_allocator.h
src/core/profiling/: crash_handler.cpp  crash_handler.h  frame_timer.cpp  frame_timer.h  profiler.h  sanitizer_hooks.cpp  sanitizer_hooks.h  seed_assert.h  tracy_seed.h
src/core/serialize/: binary_reader.cpp  binary_reader.h  binary_writer.cpp  binary_writer.h  delta.cpp  delta.h  reflection.cpp  reflection.h  snapshot.cpp  snapshot.h
tests/: CMakeLists.txt
tests/benchmarks/: bench_arena_allocator.cpp  bench_block_allocator.cpp  bench_ecs.cpp  bench_integration.cpp  bench_jobs.cpp  bench_pool_allocator.cpp  bench_serialize.cpp
tests/stress/: seed_stress.cpp
tests/unit/: main.cpp
tests/unit/diagnostics/: test_diagnostics.cpp
tests/unit/ecs/: test_ecs_basics.cpp  test_ecs_fuzz.cpp  test_ecs_performance.cpp
tests/unit/jobs/: test_job_system.cpp
tests/unit/log/: test_log.cpp
tests/unit/memory/: test_arena_allocator.cpp  test_block_allocator.cpp  test_integration.cpp  test_memory.cpp  test_memory_tracker.cpp  test_pool_allocator.cpp  test_stack_allocator.cpp
tests/unit/profiling/: test_crash_handler.cpp  test_frame_timer.cpp  test_profiling.cpp
tests/unit/serialize/: test schema migration.cpp  test_binary.cpp  test_delta.cpp  test_reflection.cpp  test_schema_migration.cpp  test_snapshot.cpp
